--- a/style/style.css
+++ b/style/style.css
@@ -65,3 +65,17 @@ img{
 .ui-datepicker{
 	background-color:white;
 }
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px
+}
+.map_cotainer{
+	width:100%;
+	height:100%;
+}
+.map{
+	width:100%;
+	height:100%
+}
